Fixed readability and added slightly purple color in Private Browsing mode

--- a/Netscape4/chrome/variables.css
+++ b/Netscape4/chrome/variables.css
@@ -34,3 +34,12 @@
     --zilla-toolbar-border-color-verydark: black;
     --zilla-toolbar-border-color-light: #efefef;
 }
+
+/* slightly purple Window Color for Private Browsing */
+#main-window[privatebrowsingmode] {
+    --zilla-ui-bg-color: #CCBFE0;
+    --toolbar-color-scheme: light !important;
+
+    color-scheme: light !important;
+
+}
